# rag_packages

./: .gitignore  main.py  pyproject.toml
src/rag_packages/contracts/dto/: chat.py  document.py  document_processor.py  ingest.py  shared_dto.py  vector_document.py
src/rag_packages/contracts/events/: document.py  ingest.py  shared_events.py
src/rag_packages/contracts/types/: shared_types.py
src/rag_packages/shared/ai/: openai.py  system_prompt.py
src/rag_packages/shared/auth/: dependencies.py  example.md  schema.py  security.py  token.py
src/rag_packages/shared/database/: query.py  uow.py
src/rag_packages/shared/exception/: exception.py  exception_handler.py
src/rag_packages/shared/kafka/: consumer.py  producer.py  rebalancer.py  utils.py
src/rag_packages/shared/kafka/producers/: ingest.py
src/rag_packages/shared/logging/: config.py  middleware.py  packages.py
src/rag_packages/shared/middleware/: request_id.py
src/rag_packages/shared/processing/: document_processor.py  qdrant.py
src/rag_packages/shared/redis/: client.py
src/rag_packages/shared/utils/: format.py
src/shared/kafka/: partition.py  producer.py  rebalancer.py
tests/: test_jwt_token.py  test_redis_client.py
