[project]
name = "rag-packages"
version = "0.1.2"
description = "Shared packages for the RAG backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"redis",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["rag_packages*"]
